spacing fixes in about us section

--- a/src/style.css
+++ b/src/style.css
@@ -1118,7 +1118,7 @@ body.dark .mb-4:hover {
 }
 
 .about-title {
-  border-bottom: 3px solid #2a63f4;
+  border-bottom: 3px solid #409B44;
   display: inline-block;
 }
 
